--- a/src/hope_flex_fields/templates/flex_fields/fielddefinition/test.html
+++ b/src/hope_flex_fields/templates/flex_fields/fielddefinition/test.html
@@ -1,7 +1,7 @@
 {% extends "admin_extra_buttons/action_page.html" %}
 {% block action-content %}
     {{ original }}
-    <form method="post">
+    <form method="post" id="test">
 
         <table>
             {% csrf_token %}
