--- a/src/hope_flex_fields/templates/flex_fields/fieldset/test.html
+++ b/src/hope_flex_fields/templates/flex_fields/fieldset/test.html
@@ -9,6 +9,8 @@
         </table>
         <input type="submit" value="Test">
     </form>
-    
+    <pre>
+    {{ form.cleaned_data }}
+    </pre>
     
 {% endblock %}
