add attributes strategies

--- a/src/hope_flex_fields/templates/flex_fields/fieldset/analyse.html
+++ b/src/hope_flex_fields/templates/flex_fields/fieldset/analyse.html
@@ -24,7 +24,7 @@
                 <tr>
                     <td>{{ fld }}</td>
                     <td>{{ fld.field }}</td>
-                    <td>{{ fld.attrs }}</td>
+                    <td>{{ fld.attributes }}</td>
                 </tr>
             {% endfor %}
         </table>
