--- a/src/hope_flex_fields/templates/flex_fields/fieldset/analyse.html
+++ b/src/hope_flex_fields/templates/flex_fields/fieldset/analyse.html
@@ -23,7 +23,7 @@
             {% for fld in fields %}
                 <tr>
                     <td>{{ fld }}</td>
-                    <td>{{ fld.field }}</td>
+                    <td>{{ fld.definition }}</td>
                     <td>{{ fld.attributes }}</td>
                 </tr>
             {% endfor %}
