--- a/src/hope_flex_fields/templates/flex_fields/fielddefinition/configure.html
+++ b/src/hope_flex_fields/templates/flex_fields/fielddefinition/configure.html
@@ -1,18 +1,30 @@
 {% extends "admin_extra_buttons/action_page.html" %}
 {% block action-content %}
+    <style>
+        table th {
+            width: 20%;
+        }
+        table td input[type=text]{
+            width: 90%;
+        }
+    </style>
     {{ form1.media }}
     {{ form2.media }}
     <form method="post" id="config-form">
-        <table>
+        <table style="width: 100%">
             {% csrf_token %}
-            <fieldset>
-                <h3>Field Configuration</h3>
-                {{ form1 }}
-            </fieldset>
-            <fieldset>
-                <h3>Strategy Configuration</h3>
-                {{ form2 }}
-            </fieldset>
+            <tr>
+                <th colspan="2">
+                    Field Configuration
+                </th>
+            </tr>
+            {{ form1.as_table }}
+            <tr>
+                <th colspan="2">
+                    Strategy Configuration
+                </th>
+            </tr>
+            {{ form2.as_table }}
         </table>
         <input type="submit" value="Save">
     </form>
