--- a/src/hope_flex_fields/templates/flex_fields/inspect.html
+++ b/src/hope_flex_fields/templates/flex_fields/inspect.html
@@ -19,7 +19,7 @@
                     {{ f }}
                 </td>
                 <td>
-                    {{ f.field.name }}({{ f.base_type }})
+                    {{ f.definition.name }}({{ f.base_type }})
                 </td>
                 <td>
                     {{ f.get_merged_attrs }}
